# rotorquant-vllm

./: README.md  pyproject.toml
experiments/: README.md  bench_compress.py  bench_decompress.py  bench_roundtrip.py
src/rotorquant_vllm/: __init__.py
src/rotorquant_vllm.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/rotorquant_vllm/quantization/: __init__.py  isoquant.py  lloyd_max.py  planarquant.py
src/rotorquant_vllm/triton/: __init__.py  fused_paged_rq_decode.py  fused_paged_rq_int8_prefill.py  isoquant_compress.py  isoquant_decompress.py  planarquant_compress.py  planarquant_decompress.py
src/rotorquant_vllm/vllm/: __init__.py  rq_backend.py
tests/: test_benchmarks.py  test_vllm_integration.py
